--- a/src/Style/maps.module.css
+++ b/src/Style/maps.module.css
@@ -251,7 +251,7 @@
   text-align: center;
   border-radius: 10px;
   height: 35px;
-  width: 150;
+  width: 150px;
   font-family: FontAwesome;
 
 }
@@ -261,6 +261,7 @@
   position:relative;
   display:flex;
   padding-top: 20px;
+  width: 150px;
   
 }
 
