--- a/src/Style/dashboard.module.css
+++ b/src/Style/dashboard.module.css
@@ -12,7 +12,7 @@
   .top {
       position: relative;
       width: 100%;
-      height: 100px;
+      height: 75px;
       background-color: #1bbc10;
   }
   
@@ -28,7 +28,8 @@
   .logout_button {
       position: relative;
       float: right;
-      margin: 10px;
+      margin: 20px;
+      margin-top: 15px;
       padding: 7px;
   }
   
@@ -73,7 +74,7 @@
     }
   
     button.nav_button {
-      margin-left: 550px;
+      margin-left: 450px;
       background-color: transparent;
       border: none;
       font-size: 25px;
